--- a/client/src/App.css
+++ b/client/src/App.css
@@ -152,97 +152,97 @@ margin: 3rem 0;
 padding: 0.8rem;
 margin: 1rem 0;
 opacity: 0.9;
-background: var(--light-color);
-color: #333;
+    background: var(--light-color);
+    color: #333;
 }
 
 .btn-primary,
 .bg-primary,
 .badge-primary,
 .alert-primary {
-background: var(--primary-color);
-color: #fff;
+    background: var(--primary-color);
+    color: #fff;
 }
 
 .btn-light,
 .bg-light,
 .badge-light,
 .alert-light {
-background: var(--light-color);
-color: #333;
+    background: var(--light-color);
+    color: #333;
 }
 
 .btn-dark,
 .bg-dark,
 .badge-dark,
 .alert-dark {
-background: var(--dark-color);
-color: #fff;
+    background: var(--dark-color);
+    color: #fff;
 }
 
 .btn-danger,
 .bg-danger,
 .badge-danger,
 .alert-danger {
-background: var(--danger-color);
-color: #fff;
+    background: var(--danger-color);
+    color: #fff;
 }
 
 .btn-success,
 .bg-success,
 .badge-success,
 .alert-success {
-background: var(--success-color);
-color: #fff;
+    background: var(--success-color);
+    color: #fff;
 }
 
 .btn-white,
 .bg-white,
 .badge-white,
 .alert-white {
-background: #fff;
-color: #333;
-border: #ccc solid 1px;
+    background: #fff;
+    color: #333;
+    border: #ccc solid 1px;
 }
 
 .btn:hover {
-opacity: 0.8;
+    opacity: 0.8;
 }
 
 .bg-light,
 .badge-light {
-border: #ccc solid 1px;
+    border: #ccc solid 1px;
 }
 
 .round-img {
-border-radius: 50%;
+    border-radius: 50%;
 }
 
 .line {
-height: 1px;
-background: #ccc;
-margin: 1.5rem 0;
+    height: 1px;
+    background: #ccc;
+    margin: 1.5rem 0;
 }
 
 /* Overlay */
 .dark-overlay {
-background-color: rgba(0, 0, 0, 0.7);
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /* Forms */
 .form .form-group {
-margin: 1.2rem 0;
+    margin: 1.2rem 0;
 }
 
 .form .form-text {
-display: block;
-margin-top: 0.3rem;
-color: #888;
+    display: block;
+    margin-top: 0.3rem;
+    color: #888;
 }
 
 .form input[type='text'],
@@ -253,6 +253,19 @@ color: #888;
 .form textarea {
     display: block;
     width: 100%;
+    padding: 0.4rem;
+    font-size: 1.2rem;
+    border: 1px solid #ccc;
+    font-family: Tahoma;
+}
+
+.form textarea {
+    font-family: Tahoma;
+}
+
+.form input[type='number'] {
+    display: block;
+    width: 20%;
     padding: 0.4rem;
     font-size: 1.2rem;
     border: 1px solid #ccc;
@@ -273,25 +286,25 @@ width: 4rem;
 }
 
 .form .social-input i.fa-twitter {
-color: #38a1f3;
+    color: #38a1f3;
 }
 .form .social-input i.fa-facebook {
-color: #3b5998;
+    color: #3b5998;
 }
 .form .social-input i.fa-instagram {
-color: #3f729b;
+    color: #3f729b;
 }
 .form .social-input i.fa-youtube {
-color: #c4302b;
+    color: #c4302b;
 }
 .form .social-input i.fa-linkedin {
-color: #0077b5;
+    color: #0077b5;
 }
 
 .table th,
 .table td {
-padding: 1rem;
-text-align: left;
+    padding: 1rem;
+    text-align: right;
 }
 
 .table th {
@@ -313,96 +326,96 @@ background: var(--light-color);
 }
 
 .navbar ul {
-display: flex;
+    display: flex;
 }
 
 .navbar a {
-color: #fff;
-padding: 0.45rem;
-margin: 0 0.25rem;
+    color: #fff;
+    padding: 0.45rem;
+    margin: 0 0.25rem;
 }
 
 .navbar a:hover {
-color: var(--primary-color);
+    color: var(--primary-color);
 }
 
 .navbar .welcome span {
-margin-right: 0.6rem;
+    margin-right: 0.6rem;
 }
 
 /* Landing Page */
 .landing {
-position: relative;
-/*background: url('../img/showcase.jpg') no-repeat center center/cover;*/
-height: 100vh;
+    position: relative;
+    /*background: url('../img/showcase.jpg') no-repeat center center/cover;*/
+    height: 100vh;
 }
 
 .landing-inner {
-color: #fff;
-height: 100%;
-width: 80%;
-margin: auto;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-text-align: center;
+    color: #fff;
+    height: 100%;
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 /* Profiles Page */
 .profile {
-display: grid;
-grid-template-columns: 2fr 4fr 2fr;
-align-items: center;
-grid-gap: 2rem;
-padding: 1rem;
-line-height: 1.8;
-margin-bottom: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 4fr 2fr;
+    align-items: center;
+    grid-gap: 2rem;
+    padding: 1rem;
+    line-height: 1.8;
+    margin-bottom: 1rem;
 }
 
 /* Profile Page */
 .profile-grid {
-display: grid;
-grid-template-areas:
-    'top top'
-    'about about'
-    'exp edu'
-    'github github';
-grid-gap: 1rem;
+    display: grid;
+    grid-template-areas:
+        'top top'
+        'about about'
+        'exp edu'
+        'github github';
+    grid-gap: 1rem;
 }
 
 .profile-top {
-grid-area: top;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-text-align: center;
+    grid-area: top;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .profile-top img {
-width: 250px;
+    width: 250px;
 }
 
 .profile-top .icons a {
-color: #fff;
-margin: 0 0.3rem;
+    color: #fff;
+    margin: 0 0.3rem;
 }
 
 .profile-top .icons a:hover {
-color: var(--dark-color);
+    color: var(--dark-color);
 }
 
 .profile-about {
-grid-area: about;
-text-align: center;
+    grid-area: about;
+    text-align: center;
 }
 
 .profile-about .skills {
-display: flex;
-align-items: center;
-justify-content: center;
-text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .profile-exp {
@@ -455,15 +468,15 @@ flex-basis: 20%;
 
 /* Posts Page */
 .post-form .post-form-header {
-background: var(--primary-color);
-padding: 0.5rem;
+    background: var(--primary-color);
+    padding: 0.5rem;
 }
 
 .post {
-display: grid;
-grid-template-columns: 1fr 4fr;
-grid-gap: 2rem;
-align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-gap: 2rem;
+    align-items: center;
 }
 
 .post > div:first-child {
